# ShowPictureWithOpenGLES

./: settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  alog.h  native-lib.cpp
app/src/main/cpp/libpng/: CMakeLists.txt  png_decoder.cpp
app/src/main/cpp/librenderer/: CMakeLists.txt  egl_core.cpp  egl_core.h  pic_preview_controller.cpp  pic_preview_render.cpp  pic_preview_render.h  pic_preview_texture.cpp  rgba_frame.h
app/src/main/java/com/smartdevice/opengles/: AssectsUtil.java  MainActivity.java  PngPreviewController.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
